--- a/Blazor.News/Blazor.News.csproj
+++ b/Blazor.News/Blazor.News.csproj
@@ -1,14 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+	<TargetFramework>net8.0</TargetFramework>
+	<Nullable>enable</Nullable>
+	<ImplicitUsings>enable</ImplicitUsings>
+	<AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	<Description>News Module Blazor.</Description>
+	<Authors>Willy Villevoye</Authors>
+	<RepositoryUrl>https://github.com/wvillevoye/BlazorNewsModule.git</RepositoryUrl>
+	<Version>1.0.0</Version>
   </PropertyGroup>
 
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="" />
+	</ItemGroup>
+	
+	
   <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+	<FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,16 +37,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Blazor.Shared.Editors\Blazor.Shared.Editors.csproj" />
+	<ProjectReference Include="..\Blazor.Shared.Editors\Blazor.Shared.Editors.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="wwwroot\SVG\EN.svg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Update="wwwroot\SVG\NL.svg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+	<Content Update="wwwroot\SVG\EN.svg">
+	  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	</Content>
+	<Content Update="wwwroot\SVG\NL.svg">
+	  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	</Content>
   </ItemGroup>
 
 	
