--- a/Blazor.Shared.Editors/Blazor.Shared.Editors.csproj
+++ b/Blazor.Shared.Editors/Blazor.Shared.Editors.csproj
@@ -1,18 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    </PropertyGroup>
+	<TargetFramework>net8.0</TargetFramework>
+	<Nullable>enable</Nullable>
+	<ImplicitUsings>enable</ImplicitUsings>
+	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	  <Description>  Blazor html editors</Description>
+	  <Authors>Willy Villevoye</Authors>
+	  <RepositoryUrl>https://github.com/wvillevoye/BlazorNewsModule.git</RepositoryUrl>
+	  <Version>1.0.0</Version>
+  </PropertyGroup>
 
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="" />
+	</ItemGroup>
+	
   <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+	<FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.10" />
-    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.6" />
+	<PackageReference Include="SixLabors.ImageSharp" Version="3.1.10" />
+	<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.6" />
   </ItemGroup>
 
   </Project>
