Enhance editor functionality and security features
- Updated `App.razor` to use `@if` for conditional rendering and included TinyMCE and Quill scripts conditionally.
- Added HTTP client service and antiforgery protection in `Program.cs`.
- Simplified usage of `TinyMceEditor` and `QuillEditor` in `NieuwsArtikelForm.razor`.
- Introduced `ImageFile` class for image metadata management.
- Created `QuillExplorer.razor` for image selection modal and added `BootstrapToast.razor` for user notifications.
- Enhanced `QuillEditor.razor` and `quill-blazor-interop.js` for improved image handling.
- Updated project references in `Blazor.Shared.Editors.csproj` and `UL.UI.Components.csproj`.
- Improved modal functionality in `GenericModal.razor` and `ManualCopyModal.razor`.

--- a/Blazor.Shared.Editors/Blazor.Shared.Editors.csproj
+++ b/Blazor.Shared.Editors/Blazor.Shared.Editors.csproj
@@ -24,4 +24,8 @@
 	<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UL.UI.Components\UL.UI.Components.csproj" />
+  </ItemGroup>
+
   </Project>
