Enhance Blazor app with new components and improvements
- Added project references for `Blazor.Shared.Editors` and `UL.UI.Components`.
- Introduced `CalloutAlert` component for customizable alert messages.
- Updated `NieuwsArtikelForm.razor` to use nullable types for `toast`.
- Reduced delay in `HandleValidSubmit` method for better UX.
- Enhanced `UploadImage` method to accept optional `userId`.
- Added utility methods for file handling and improved null checks.
- Removed unused binary file `zyxhufb1.ssi.png`.

--- a/Blazor.News.Sample/Blazor.News.Sample.csproj
+++ b/Blazor.News.Sample/Blazor.News.Sample.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Blazor.News\Blazor.News.csproj" />
+    <ProjectReference Include="..\Blazor.Shared.Editors\Blazor.Shared.Editors.csproj" />
+    <ProjectReference Include="..\UL.UI.Components\UL.UI.Components.csproj" />
   </ItemGroup>
 
   <ItemGroup>
