--- a/Blazor.News/Blazor.News.csproj
+++ b/Blazor.News/Blazor.News.csproj
@@ -37,7 +37,8 @@
   </ItemGroup>
 
   <ItemGroup>
-	<ProjectReference Include="..\Blazor.Shared.Editors\Blazor.Shared.Editors.csproj" />
+    <ProjectReference Include="..\Blazor.Shared.Editors\Blazor.Shared.Editors.csproj" />
+    <ProjectReference Include="..\UL.UI.Components\UL.UI.Components.csproj" />
   </ItemGroup>
 
   <ItemGroup>
